@@ -1040,76 +1040,90 @@
     = <em>filename</em></font><br>
     Example: <font size="2" face="Courier New, Courier, mono">CloseSound 1 = close.wav</font></p>
   <p align="left"><strong>10. StartSound</strong> - the sound file to play when 
-    the elevator starts moving/speeds up. Default is <em>elevstart.wav</em>.<br>
+    the elevator starts moving/speeds up. By default no sound is played.<br>
     Example: <font size="2" face="Courier New, Courier, mono">StartSound = start.wav</font></p>
   <p align="left"><strong>11. MoveSound</strong> - the sound file to play while 
     the elevator is moving. This file is automatically looped by the simulator. 
-    Default is <em>elevmove.wav</em>.<br>
+    By default no sound is played.<br>
     Example: <font size="2" face="Courier New, Courier, mono">MoveSound = move.wav</font></p>
   <p align="left"><strong>12. StopSound</strong> - the sound file to play when 
-    the elevator slows down and stops. Default is <em>elevstop.wav</em>.<br>
+    the elevator slows down and stops. By default no sound is played.<br>
     Example: <font size="2" face="Courier New, Courier, mono">StopSound = stop.wav</font></p>
-  <p align="left"><strong>13. IdleSound</strong> - the sound file to play when
+  <p align="left"><strong>13. IdleSound</strong> - the sound file to play when 
     the elevator is idle. Default is <em>elevidle.wav</em>.<br>
     Example: <font size="2" face="Courier New, Courier, mono">IdleSound = idle.wav</font></p>
-  <p align="left"><strong>14. ChimeSound</strong> - the sound file to play when 
+  <p align="left"><strong>14. MotorStartSound</strong> - the sound file to play 
+    when the elevator motor starts moving/speeds up. Default is <em>elevstart.wav</em>.<br>
+    Example: <font size="2" face="Courier New, Courier, mono">MotorStartSound 
+    = start.wav</font></p>
+  <p align="left"><strong>15. MotorRunSound</strong> - the sound file to play 
+    while the elevator motor is running. This file is automatically looped by 
+    the simulator. Default is <em>elevmove.wav</em>.<br>
+    Example: <font size="2" face="Courier New, Courier, mono">MotorRunSound = 
+    run.wav</font></p>
+  <p align="left"><strong>16. MotorStopSound</strong> - the sound file to play 
+    when the elevator motor slows down and stops. Default is <em>elevstop.wav</em>.<br>
+    Example: <font size="2" face="Courier New, Courier, mono">MotorStopSound = 
+    stop.wav</font></p>
+  <p align="left"><strong>17. ChimeSound</strong> - the sound file to play when 
     the elevator arrives at a floor. Default is <em>chime1.wav</em>. This must 
-    be specified after the CreateElevator command. This is used for both up and down chimes.<br>
+    be specified after the CreateElevator command. This is used for both up and 
+    down chimes.<br>
     Syntax: <font size="2" face="Courier New, Courier, mono">ChimeSound <em>doornumber</em> 
     = <em>filename</em></font><br>
     Example: <font size="2" face="Courier New, Courier, mono">ChimeSound 1 = chime.wav</font></p>
-  <p align="left"><strong>15. UpChimeSound</strong> - the sound file to play when
-    the elevator arrives at a floor and it's direction is up. Default is <em>chime1.wav</em>. This must
-    be specified after the CreateElevator command.<br>
+  <p align="left"><strong>18. UpChimeSound</strong> - the sound file to play when 
+    the elevator arrives at a floor and it's direction is up. Default is <em>chime1.wav</em>. 
+    This must be specified after the CreateElevator command.<br>
     Syntax: <font size="2" face="Courier New, Courier, mono">UpChimeSound <em>doornumber</em>
     = <em>filename</em></font><br>
     Example: <font size="2" face="Courier New, Courier, mono">UpChimeSound 1 = 
     chime.wav</font></p>
-  <p align="left"><strong>16. DownChimeSound</strong> - the sound file to play when
-    the elevator arrives at a floor and it's direction is down. Default is <em>chime1.wav</em>. This must
-    be specified after the CreateElevator command.<br>
+  <p align="left"><strong>19. DownChimeSound</strong> - the sound file to play 
+    when the elevator arrives at a floor and it's direction is down. Default is 
+    <em>chime1.wav</em>. This must be specified after the CreateElevator command.<br>
     Syntax: <font size="2" face="Courier New, Courier, mono">DownChimeSound <em>doornumber</em>
     = <em>filename</em></font><br>
     Example: <font size="2" face="Courier New, Courier, mono">DownChimeSound 1 
     = chime.wav</font></p>
-  <p align="left"><strong>17. AlarmSound</strong> - the sound file to play when 
+  <p align="left"><strong>20. AlarmSound</strong> - the sound file to play when 
     the elevator alarm button is pressed. Default is <em>bell1.wav</em>.<br>
     Example: <font size="2" face="Courier New, Courier, mono">AlarmSound = bell2.wav</font></p>
-  <p align="left"><strong>18. AlarmSoundStop</strong> - the sound file to play 
+  <p align="left"><strong>21. AlarmSoundStop</strong> - the sound file to play 
     when the elevator alarm button is released. Default is <em>bell1-stop.wav</em>.<br>
     Example: <font size="2" face="Courier New, Courier, mono">AlarmSoundStop = 
     bell2-stop.wav</font></p>
-  <p align="left"><strong>19. BeepSound</strong> - the sound file to play when 
+  <p align="left"><strong>22. BeepSound</strong> - the sound file to play when 
     the elevator reaches a new floor. There is no default; if this is set, the 
     beeps will be automatically enabled.<br>
     Example: <font size="2" face="Courier New, Courier, mono">BeepSound = beep.wav</font></p>
-  <p align="left"><strong>20. FloorSound</strong> - the sound file(s) to play 
+  <p align="left"><strong>23. FloorSound</strong> - the sound file(s) to play 
     when the elevator arrives at a floor; normally this is used for files that 
     speak the floor number. There is no default; if this is set, the sounds will 
     be automatically enabled. If an asterisk (*) is specified, it is replaced 
     with the current floor number.<br>
     Example: <font size="2" face="Courier New, Courier, mono">FloorSound = floor*.wav</font></p>
-  <p align="left"><strong>21. FloorSkipText</strong> - sets the text that will 
+  <p align="left"><strong>24. FloorSkipText</strong> - sets the text that will 
     be shown in the floor indicator when passing non-serviced floors. The texture 
     for this must be loaded for it to show - of you set this to EX for example, 
     the texture it'll load is ButtonEX.jpg. Common values for this are EZ, X, 
     and EX (which stand for Express Zone).<br>
     Example: <font size="2" face="Courier New, Courier, mono">FloorSkipText = 
     EZ </font></p>
-  <p align="left"><strong>22. RecallFloor</strong> - sets the floor the elevator 
+  <p align="left"><strong>25. RecallFloor</strong> - sets the floor the elevator 
     will recall to during fire service phase 1 mode. Default is the lowest serviced 
     floor. <br>
     Example: <font size="2" face="Courier New, Courier, mono">RecallFloor = 5</font></p>
-  <p align="left"><strong>23. AlternateRecallFloor</strong> - sets the alternate 
+  <p align="left"><strong>26. AlternateRecallFloor</strong> - sets the alternate 
     floor the elevator will recall to during fire service phase 1 mode. Default 
     is the highest serviced floor. <br>
     Example: <font size="2" face="Courier New, Courier, mono">AlternateRecallFloor 
     = 6</font></p>
-  <p align="left"><strong>24. ACPFloor</strong> - sets the floor the elevator 
+  <p align="left"><strong>27. ACPFloor</strong> - sets the floor the elevator 
     will stop at while in ACP (Anti-Crime Protection) mode. Default is the lowest 
     serviced floor. <br>
     Example: <font size="2" face="Courier New, Courier, mono">ACPFloor = 5</font></p>
-  <p align="left"><strong>25. Doors</strong> - sets the number of doors the elevator 
+  <p align="left"><strong>28. Doors</strong> - sets the number of doors the elevator 
     will have. The default is 1. Set to 0 in order to have a doorless elevator.<br>
     Example: <font size="2" face="Courier New, Courier, mono">Doors = 2</font></p>
   <p align="left"></p>
