@@ -199,16 +199,28 @@ Skyscraper.SBS.Elevator.AccelJerk = 1.0
 Skyscraper.SBS.Elevator.DecelJerk = 1.0
 
 ;sound file for move startup
-Skyscraper.SBS.Elevator.StartSound = elevstart.wav
+;Skyscraper.SBS.Elevator.StartSound = elevstart.wav
 
 ;sound file for move
-Skyscraper.SBS.Elevator.MoveSound = elevmove.wav
+;Skyscraper.SBS.Elevator.MoveSound = elevmove.wav
 
 ;sound file for slowdown/stop
-Skyscraper.SBS.Elevator.StopSound = elevstop.wav
+;Skyscraper.SBS.Elevator.StopSound = elevstop.wav
 
 ;sound file for idle
 Skyscraper.SBS.Elevator.IdleSound = elevidle.wav
+
+;sound file for motor move startup
+;Skyscraper.SBS.Elevator.MotorStartSound = motor_start.wav
+Skyscraper.SBS.Elevator.MotorStartSound = elevstart.wav
+
+;sound file for motor move
+;Skyscraper.SBS.Elevator.MotorMoveSound = motor_running.wav
+Skyscraper.SBS.Elevator.MotorMoveSound = elevmove.wav
+
+;sound file for motor slowdown/stop
+;Skyscraper.SBS.Elevator.MotorStopSound = motor_stop.wav
+Skyscraper.SBS.Elevator.MotorStopSound = elevstop.wav
 
 ;sound file for alarm loop
 Skyscraper.SBS.Elevator.AlarmSound = bell1.wav
